[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physiotokenizer"
version = "0.1.0"
description = "Frequency-aware discrete tokenization for multimodal physiological signals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anonymous", email = "anonymous@example.com"}
]
keywords = [
    "time-series", "foundation-model", "tokenization", "physiological-signals",
    "ECG", "EEG", "PPG", "vector-quantization", "healthcare-AI"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "h5py>=3.11.0",
    "wfdb>=4.1.0",
    "mne>=1.8.0",
    "neurokit2>=0.2.10",
    "PyWavelets>=1.6.0",
    "vector-quantize-pytorch>=1.20.0",
    "lightning>=2.4.0",
    "transformers>=4.45.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "black>=24.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]
viz = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.23.0",
]
hf = [
    "huggingface_hub>=0.25.0",
    "datasets>=2.20.0",
    "gradio>=5.0.0",
]

[project.scripts]
physiotokenizer-train = "src.train.run_pretraining:main"
physiotokenizer-benchmark = "src.eval.benchmark:main"
physiotokenizer-plot = "src.viz.plot_results:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
